--- a/src/test/java/com/digitald4/biblical/util/data/Jubilees 19.html
+++ b/src/test/java/com/digitald4/biblical/util/data/Jubilees 19.html
@@ -1,135 +1,133 @@
 
-<!-- saved from url=(0045)http://www.pseudepigrapha.com/jubilees/19.htm -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Jubilees 19</title>
+<html>
+<head>
+  <title>Jubilees 19</title>
 </head>
 <body>
-<h3><a href="http://www.pseudepigrapha.com/jubilees/index.htm">The Book of Jubilees</a></h3>
+<h3><a href="index.htm">The Book of Jubilees</a></h3>
 <blockquote><em>
-Return of Abraham to Hebron. Death and burial of Sarah, 1-9. Marriage of Isaac and second
-marriage of Abraham. Birth of Esau and Jacob, 10-14. Abraham commends Jacob to Rebecca
-and blesses him, 15-31. (Cf. Gen. xxiii.1-4, 11-16; xxiv.15; xxv.1-2, 25-7; xiii. 16.)
+  Return of Abraham to Hebron. Death and burial of Sarah, 1-9. Marriage of Isaac and second
+  marriage of Abraham. Birth of Esau and Jacob, 10-14. Abraham commends Jacob to Rebecca
+  and blesses him, 15-31. (Cf. Gen. xxiii.1-4, 11-16; xxiv.15; xxv.1-2, 25-7; xiii. 16.)
 </em></blockquote>
 <p>[Chapter 19]
-</p><ol>
-    <li>And in the first year of the first week in the forty-second jubilee, Abraham returned and
-dwelt
-    opposite Hebron, that is Kirjath Arba, two weeks of years.  </li><li>And in the first year of the
-third week
-    of this jubilee the days of the life of Sarah were accomplished, and she died in Hebron. 
-</li><li>And Abraham went to mourn over her and bury her, and we tried him [to see] if his spirit were
-patient and he were not indignant in the words of his mouth; and he was found patient in this, and
-was not
-    disturbed.  </li><li>For in patience of spirit he conversed with the children of Heth, to the intent
-that they
-    should give him a place in which to bury his dead.  </li><li>And the Lord gave him grace before
-all who saw him, and he besought in gentleness the sons of Heth, and they gave him the land of
-the double
-    cave over against Mamre, that is Hebron, for four hundred pieces of silver.  </li><li>And they
-besought him saying, We shall give it to thee for nothing; but he would not take it from their
-hands for nothing, for he gave the price of the place, the money in full, and he bowed down before
-them twice, and after
-    this he buried his dead in the double cave.  </li><li>And all the days of the life of Sarah were one
-hundred and twenty-seven years, that is, two jubilees and four weeks and one year:  these are the
-days of the
-    years of the life of Sarah.  </li><li>This is the tenth trial wherewith Abraham was tried, and he
-was found
-    faithful, patient in spirit.  </li><li>And he said not a single word regarding the rumour in the land
-how that God had said that He would give it to him and to his seed after him, and he begged a
-place there to bury his dead; for he was found faithful, and was recorded on the heavenly tablets
-as the friend of
-    God.  </li><li>And in the fourth year thereof he took a wife for his son Isaac and her name was
-Rebecca [2020 A.M.] [the daughter of Bethuel, the son of Nahor, the brother of Abraham] the
-sister of Laban and daughter of Bethuel; and Bethuel was the son of Melca, who was the wife of
-Nahor, the brother of Abraham.
-    </li><li>And Abraham took to himself a third wife, and her name was Keturah, from among the
-daughters of his household servants, for Hagar had died before Sarah.  And she bare him six sons,
-Zimram,
+<OL>
+  <LI>And in the first year of the first week in the forty-second jubilee, Abraham returned and
+    dwelt
+    opposite Hebron, that is Kirjath Arba, two weeks of years.  <LI>And in the first year of the
+  third week
+  of this jubilee the days of the life of Sarah were accomplished, and she died in Hebron.
+  <LI>And Abraham went to mourn over her and bury her, and we tried him [to see] if his spirit were
+    patient and he were not indignant in the words of his mouth; and he was found patient in this, and
+    was not
+    disturbed.  <LI>For in patience of spirit he conversed with the children of Heth, to the intent
+  that they
+  should give him a place in which to bury his dead.  <LI>And the Lord gave him grace before
+  all who saw him, and he besought in gentleness the sons of Heth, and they gave him the land of
+  the double
+  cave over against Mamre, that is Hebron, for four hundred pieces of silver.  <LI>And they
+  besought him saying, We shall give it to thee for nothing; but he would not take it from their
+  hands for nothing, for he gave the price of the place, the money in full, and he bowed down before
+  them twice, and after
+  this he buried his dead in the double cave.  <LI>And all the days of the life of Sarah were one
+  hundred and twenty-seven years, that is, two jubilees and four weeks and one year:  these are the
+  days of the
+  years of the life of Sarah.  <LI>This is the tenth trial wherewith Abraham was tried, and he
+  was found
+  faithful, patient in spirit.  <LI>And he said not a single word regarding the rumour in the land
+  how that God had said that He would give it to him and to his seed after him, and he begged a
+  place there to bury his dead; for he was found faithful, and was recorded on the heavenly tablets
+  as the friend of
+  God.  <LI>And in the fourth year thereof he took a wife for his son Isaac and her name was
+  Rebecca [2020 A.M.] [the daughter of Bethuel, the son of Nahor, the brother of Abraham] the
+  sister of Laban and daughter of Bethuel; and Bethuel was the son of Melca, who was the wife of
+  Nahor, the brother of Abraham.
+  <LI>And Abraham took to himself a third wife, and her name was Keturah, from among the
+    daughters of his household servants, for Hagar had died before Sarah.  And she bare him six sons,
+    Zimram,
     and Jokshan, and Medan, and Midian, and Ishbak, and Shuah, in the two weeks of
-years.  </li><li>And in 
-    the sixth week, in the second year thereof, Rebecca bare to Isaac two sons, Jacob and
-Esau, </li><li>and [2046 A.M.] Jacob was a smooth and upright man, and Esau was fierce, a man of the
-field, and hairy, and Jacob
-    dwelt in tents.  </li><li>And the youths grew, and Jacob learned to write; but Esau did not
-learn, for he
-    was a man of the field and a hunter, and he learnt war, and all his deeds were fierce. 
-</li><li>And Abraham
-    loved Jacob, but Isaac loved Esau.  </li><li>And Abraham saw the deeds of Esau, and he knew
-that in Jacob should his name and seed be called; and he called Rebecca and gave commandment
-regarding
-    Jacob, for he knew that she (too) loved Jacob much more than Esau.  </li><li>And he said unto
-her:  <p>
+    years.  <LI>And in
+  the sixth week, in the second year thereof, Rebecca bare to Isaac two sons, Jacob and
+  Esau, <LI>and [2046 A.M.] Jacob was a smooth and upright man, and Esau was fierce, a man of the
+  field, and hairy, and Jacob
+  dwelt in tents.  <LI>And the youths grew, and Jacob learned to write; but Esau did not
+  learn, for he
+  was a man of the field and a hunter, and he learnt war, and all his deeds were fierce.
+  <LI>And Abraham
+    loved Jacob, but Isaac loved Esau.  <LI>And Abraham saw the deeds of Esau, and he knew
+  that in Jacob should his name and seed be called; and he called Rebecca and gave commandment
+  regarding
+  Jacob, for he knew that she (too) loved Jacob much more than Esau.  <LI>And he said unto
+  her:  <P>
 
-     My daughter, watch over my son Jacob, <br>
-     For he shall be in my stead on the earth, <br>
-     And for a blessing in the midst of the children of men, <br>
-     And for the glory of the whole seed of Shem.</p><p>
+    My daughter, watch over my son Jacob, <BR>
+    For he shall be in my stead on the earth, <BR>
+    And for a blessing in the midst of the children of men, <BR>
+    And for the glory of the whole seed of Shem.<P>
 
-     </p></li><li>For I know that the Lord will choose him to be a people for possession unto Himself,
-above all
-    peoples that are upon the face of the earth.  </li><li>And behold, Isaac my son loves Esau more
-than Jacob, but I see that thou truly lovest Jacob.
-<p>
-</p></li><li>Add still further to thy kindness to him, <br>
-     And let thine eyes be upon him in love; <br>
-     For he shall be a blessing unto us on the earth from henceforth unto all generations of the
-earth.<p>
+  <LI>For I know that the Lord will choose him to be a people for possession unto Himself,
+    above all
+    peoples that are upon the face of the earth.  <LI>And behold, Isaac my son loves Esau more
+  than Jacob, but I see that thou truly lovest Jacob.
+  <P>
+  <LI>Add still further to thy kindness to him, <BR>
+    And let thine eyes be upon him in love; <BR>
+    For he shall be a blessing unto us on the earth from henceforth unto all generations of the
+    earth.<P>
 
-</p></li><li>Let thy hands be strong <br>
-     And let thy heart rejoice in thy son Jacob; <br>
-     For I have loved him far beyond all my sons.<p>
+  <LI>Let thy hands be strong <BR>
+    And let thy heart rejoice in thy son Jacob; <BR>
+    For I have loved him far beyond all my sons.<P>
 
-     He shall be blessed for ever, <br>
-     And his seed shall fill the whole earth.</p><p>
+      He shall be blessed for ever, <BR>
+      And his seed shall fill the whole earth.<P>
 
-</p></li><li>If a man can number the sand of the earth, <br>
-     His seed also shall be numbered.<p>
+  <LI>If a man can number the sand of the earth, <BR>
+    His seed also shall be numbered.<P>
 
-    </p></li><li>And all the blessings wherewith the Lord hath blessed me and my seed shall belong to
-Jacob and
-    his seed alway.  </li><li>And in his seed shall my name be blessed, and the name of my fathers,
-Shem, and 
-    Noab, and Enoch, and Mahalalel, and Enos, and Seth, and Adam.  </li><li>And these shall
-serve <p>
+  <LI>And all the blessings wherewith the Lord hath blessed me and my seed shall belong to
+    Jacob and
+    his seed alway.  <LI>And in his seed shall my name be blessed, and the name of my fathers,
+  Shem, and
+  Noab, and Enoch, and Mahalalel, and Enos, and Seth, and Adam.  <LI>And these shall
+  serve <P>
 
-     To lay the foundations of the heaven, <br>
-     And to strengthen the earth, <br>
-     And to renew all the luminaries which are in the firmament.</p><p>
+    To lay the foundations of the heaven, <BR>
+    And to strengthen the earth, <BR>
+    And to renew all the luminaries which are in the firmament.<P>
 
-    </p></li><li>And he called Jacob before the eyes of Rebecca his mother, and kissed him, and blessed
-him, and
-    said:  </li><li>'Jacob, my beloved son, whom my soul loveth, may God bless thee from above
-the firmament, and may He give thee all the blessings wherewith He blessed Adam, and Enoch,
-and Noah, and Shem; and all the things of which He told me, and all the things which He
-promised to give me, may he cause to cleave to thee and to thy seed for ever, according to the
-days of heaven above the
-    earth.  </li><li>And the Spirits of Mastêmâ shall not rule over thee or over thy seed to turn thee
-from the
-    Lord, who is thy God from henceforth for ever.  </li><li>And may the Lord God be a father to
-thee and
-    thou the first-born son, and to the people alway.  </li><li>Go in peace, my son.'  And they both
-went forth
-    together from Abraham.  </li><li>And Rebecca loved Jacob, with all her heart and with all her
-soul, very much more than Esau; but Isaac loved Esau much more than Jacob.
+  <LI>And he called Jacob before the eyes of Rebecca his mother, and kissed him, and blessed
+    him, and
+    said:  <LI>'Jacob, my beloved son, whom my soul loveth, may God bless thee from above
+  the firmament, and may He give thee all the blessings wherewith He blessed Adam, and Enoch,
+  and Noah, and Shem; and all the things of which He told me, and all the things which He
+  promised to give me, may he cause to cleave to thee and to thy seed for ever, according to the
+  days of heaven above the
+  earth.  <LI>And the Spirits of Mast&ecirc;m&acirc; shall not rule over thee or over thy seed to turn thee
+  from the
+  Lord, who is thy God from henceforth for ever.  <LI>And may the Lord God be a father to
+  thee and
+  thou the first-born son, and to the people alway.  <LI>Go in peace, my son.'  And they both
+  went forth
+  together from Abraham.  <LI>And Rebecca loved Jacob, with all her heart and with all her
+  soul, very much more than Esau; but Isaac loved Esau much more than Jacob.
 
 
-</li></ol>
+</OL>
+<HR>
+Chapter: <a href="1.htm">1</a> | <a href="2.htm">2</a> | <a href="3.htm">3</a> |
+<a href="4.htm">4</a> | <a href="5.htm">5</a> | <a href="6.htm">6</a> | <a href="7.htm">7</a> |
+<a href="8.htm">8</a> | <a href="9.htm">9</a> | <a href="10.htm">10</a> | <a href="11.htm">11</a> | <a href="12.htm">12</a> | <a href="13.htm">13</a> |
+<a href="14.htm">14</a> | <a href="15.htm">15</a> | <a href="16.htm">16</a> | <a href="17.htm">17</a> | <a href="18.htm">18</a> | <a href="19.htm">19</a> |
+<a href="20.htm">20</a> | <a href="21.htm">21</a> | <a href="22.htm">22</a> | <a href="23.htm">23</a> | <a href="24.htm">24</a> | <a href="25.htm">25</a> |
+<a href="26.htm">26</a> | <a href="27.htm">27</a> | <a href="28.htm">28</a> | <a href="29.htm">29</a> | <a href="30.htm">30</a> | <a href="31.htm">31</a> |
+<a href="32.htm">32</a> | <a href="33.htm">33</a> | <a href="34.htm">34</a> | <a href="35.htm">35</a> | <a href="36.htm">36</a> | <a href="37.htm">37</a> |
+<a href="38.htm">38</a> | <a href="39.htm">39</a> | <a href="40.htm">40</a> | <a href="41.htm">41</a> | <a href="42.htm">42</a> | <a href="43.htm">43</a> |
+<a href="44.htm">44</a> | <a href="45.htm">45</a> | <a href="46.htm">46</a> | <a href="47.htm">47</a> | <a href="48.htm">48</a> | <a href="49.htm">49</a> |
+<a href="50.htm">50</a>
 <hr>
-Chapter: <a href="http://www.pseudepigrapha.com/jubilees/1.htm">1</a> | <a href="http://www.pseudepigrapha.com/jubilees/2.htm">2</a> | <a href="http://www.pseudepigrapha.com/jubilees/3.htm">3</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/4.htm">4</a> | <a href="http://www.pseudepigrapha.com/jubilees/5.htm">5</a> | <a href="http://www.pseudepigrapha.com/jubilees/6.htm">6</a> | <a href="http://www.pseudepigrapha.com/jubilees/7.htm">7</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/8.htm">8</a> | <a href="http://www.pseudepigrapha.com/jubilees/9.htm">9</a> | <a href="http://www.pseudepigrapha.com/jubilees/10.htm">10</a> | <a href="http://www.pseudepigrapha.com/jubilees/11.htm">11</a> | <a href="http://www.pseudepigrapha.com/jubilees/12.htm">12</a> | <a href="http://www.pseudepigrapha.com/jubilees/13.htm">13</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/14.htm">14</a> | <a href="http://www.pseudepigrapha.com/jubilees/15.htm">15</a> | <a href="http://www.pseudepigrapha.com/jubilees/16.htm">16</a> | <a href="http://www.pseudepigrapha.com/jubilees/17.htm">17</a> | <a href="http://www.pseudepigrapha.com/jubilees/18.htm">18</a> | <a href="http://www.pseudepigrapha.com/jubilees/19.htm">19</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/20.htm">20</a> | <a href="http://www.pseudepigrapha.com/jubilees/21.htm">21</a> | <a href="http://www.pseudepigrapha.com/jubilees/22.htm">22</a> | <a href="http://www.pseudepigrapha.com/jubilees/23.htm">23</a> | <a href="http://www.pseudepigrapha.com/jubilees/24.htm">24</a> | <a href="http://www.pseudepigrapha.com/jubilees/25.htm">25</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/26.htm">26</a> | <a href="http://www.pseudepigrapha.com/jubilees/27.htm">27</a> | <a href="http://www.pseudepigrapha.com/jubilees/28.htm">28</a> | <a href="http://www.pseudepigrapha.com/jubilees/29.htm">29</a> | <a href="http://www.pseudepigrapha.com/jubilees/30.htm">30</a> | <a href="http://www.pseudepigrapha.com/jubilees/31.htm">31</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/32.htm">32</a> | <a href="http://www.pseudepigrapha.com/jubilees/33.htm">33</a> | <a href="http://www.pseudepigrapha.com/jubilees/34.htm">34</a> | <a href="http://www.pseudepigrapha.com/jubilees/35.htm">35</a> | <a href="http://www.pseudepigrapha.com/jubilees/36.htm">36</a> | <a href="http://www.pseudepigrapha.com/jubilees/37.htm">37</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/38.htm">38</a> | <a href="http://www.pseudepigrapha.com/jubilees/39.htm">39</a> | <a href="http://www.pseudepigrapha.com/jubilees/40.htm">40</a> | <a href="http://www.pseudepigrapha.com/jubilees/41.htm">41</a> | <a href="http://www.pseudepigrapha.com/jubilees/42.htm">42</a> | <a href="http://www.pseudepigrapha.com/jubilees/43.htm">43</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/44.htm">44</a> | <a href="http://www.pseudepigrapha.com/jubilees/45.htm">45</a> | <a href="http://www.pseudepigrapha.com/jubilees/46.htm">46</a> | <a href="http://www.pseudepigrapha.com/jubilees/47.htm">47</a> | <a href="http://www.pseudepigrapha.com/jubilees/48.htm">48</a> | <a href="http://www.pseudepigrapha.com/jubilees/49.htm">49</a> | 
-<a href="http://www.pseudepigrapha.com/jubilees/50.htm">50</a> 
-<hr>
-<b>From <a href="http://www.pseudepigrapha.com/index.html">The Apocrypha and Pseudepigrapha of the Old Testament</a><br>
-by R.H. Charles, Oxford:  Clarendon Press, 1913<br>
-Scanned and Edited by Joshua Williams, Northwest Nazarene College</b>
-
-
-
-<style>.tb_button {padding:1px;cursor:pointer;border-right: 1px solid #8b8b8b;border-left: 1px solid #FFF;border-bottom: 1px solid #fff;}.tb_button.hover {borer:2px outset #def; background-color: #f8f8f8 !important;}.ws_toolbar {z-index:100000} .ws_toolbar .ws_tb_btn {cursor:pointer;border:1px solid #555;padding:3px}   .tb_highlight{background-color:yellow} .tb_hide {visibility:hidden} .ws_toolbar img {padding:2px;margin:0px}</style></body></html>
+<b>From <a href="../index.html">The Apocrypha and Pseudepigrapha of the Old Testament</a><BR>
+  by R.H. Charles, Oxford:  Clarendon Press, 1913<br>
+  Scanned and Edited by Joshua Williams, Northwest Nazarene College</b>
+</body>
+</html>
