--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta charset="utf-8">
 
-    <title>True Israelite Solar Calendar</title>
+    <title>Mackabees Ministries</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
