--- a/src/main/js/html/scripture_view.html
+++ b/src/main/js/html/scripture_view.html
@@ -1,5 +1,5 @@
 <div id="eventModal" style="display: block;">
-  <div class="modal-window block-border" style="display: block; left: 5px; top: 50px; width: 380px; position: fixed;">
+  <div class="modal-window block-border">
     <ul class="action-tabs right">
       <li>
         <a href="" data-ng-click="$ctrl.closeDialog()" title="Close window">
