--- a/src/main/js/html/utils.html
+++ b/src/main/js/html/utils.html
@@ -27,6 +27,7 @@
           </div>
         </fieldset>
       </div>
+      <!-- a href="https://drive.google.com/file/d/1NxRZEI2ddSBE6MbkWtKEGjW3Ko1XjxOF/view?usp=sharing">Open VPN</a -->
     </div>
   </div>
   <scripture-view data-ng-if="$ctrl.reference" data-reference="$ctrl.reference"></scripture-view>
