--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,6 +51,7 @@
 
     <!-- Angular -->
     <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/angular-bind-html-compile.min.js"></script>
     <script src="js/lib/angular-route.min.js"></script>
     <script src="js/lib/angular-sanitize.min.js"></script>
 
@@ -64,14 +65,18 @@
   </head>
 
   <body data-ng-app="biblical" data-ng-controller="DD4AppCtrl as appCtrl">
-    <div data-ng-controller="BiblicalCtrl as biblicalCtrl">
+    <div data-ng-controller="biblicalCtrl as biblicalCtrl">
       | <a href="#/calendar?{{appCtrl.getIdTokenParameter()}}">Calendar</a>
       | <a href="#/read_the_word?{{appCtrl.getIdTokenParameter()}}">Read the Word</a>
       | <a href="#/the_law?{{appCtrl.getIdTokenParameter()}}">The Law</a>
+      <span data-ng-if="appCtrl.globalData.runningLocal">
+        | <a href="#/lessons?{{appCtrl.getIdTokenParameter()}}">Lessons</a>
+      </span>
       | <a href="#/utils?{{appCtrl.getIdTokenParameter()}}">Utilities</a> |
       <!-- Content -->
       <article class="container_12">
         <div data-ng-view></div>
+        <scripture-view data-ng-if="biblicalCtrl.globalData.reference" data-reference="biblicalCtrl.globalData.reference"></scripture-view>
       </article>
       <!-- End content -->
       <dd4-login data-ng-if="biblicalCtrl.loginDialogShown" data-on-cancel="biblicalCtrl.hideLoginDialog()"
